# dexr

./: .gitignore  .prettierrc.json5  Cargo.toml  README.md  TODO
.github/workflows/: rust.yml
src/: config.rs  error.rs  main.rs  server.rs  util.rs
src/routes/: fs.rs  mod.rs  thumbnail.rs
src/routes/fs/: mod.rs  template.rs
src/thumbnail/: image.rs  mod.rs
src/thumbnail/generate/: mod.rs  scale_plugin.rs
static/: index.css  index.js
templates/: index.stpl
