[package]
edition = "2021"
name = "dexr"
version = "0.1.0"

[dependencies]
anyhow = "1"
atomic_refcell = "0.1"
axum = "0.5"
base64 = "0.13"
bindable = { version = "0.1", features = ["with-serde"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
gstreamer = { version = "0.18", features = ["v1_20"] }
gstreamer-app = "0.18"
gstreamer-video = "0.18"
http = "0.2"
hyper = "0.14"
image = "0.24"
mime = "0.3"
once_cell = "1"
rayon = "1"
sailfish = { version = "0.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
static-router = "0.1.2"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread"] }
tokio-rayon = "2"
tower-http = { version = "0.3", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
