[package]
description = "A directory indexer with thumbnails, previews, and slideshow functionality."
edition = "2021"
license = "AGPL-3.0-or-later"
name = "dexr"
repository = "https://github.com/mattfbacon/dexr"
version = "0.4.1"

[dependencies]
anyhow = "1"
atomic_refcell = "0.1"
axum = "0.5"
az = "1"
base64 = "0.13"
bindable = { version = "0.1", features = ["with-serde"] }
bytes = "1"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
gstreamer = "0.18"
gstreamer-app = "0.18"
gstreamer-video = "0.18"
html-escape = "0.2"
http = "0.2"
hyper = "0.14"
image = "0.24"
mime = "0.3"
once_cell = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
static-router = "0.1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread"] }
tokio-rayon = "2"
tower-http = { version = "0.3", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
